--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             top: 0;
             height: 100%;
             width: 3px;
-            background: linear-gradient(to bottom, #667eea, #764ba2);
+/*             background: linear-gradient(to bottom, #667eea, #764ba2); */
         }
 
         .timeline-item {
