--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Yogesh Prakash Bhavsar</h1>
+            <h1>Yogesh Bhavsar</h1>
             <h2>Full Stack Developer</h2>
             <p>Passionate about creating scalable web solutions with 2+ years of experience in Java, Spring Boot, Angular, and Django. Ready to contribute to innovative projects in Agile environments.</p>
             <div class="cta-buttons">
