Revise profile information and experience details
Updated profile details to reflect 3+ years of experience and immediate availability. Enhanced the description of skills and achievements for better clarity.

--- a/index.html
+++ b/index.html
@@ -623,8 +623,11 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Yogesh Bhavsar</h1>
-            <h2>Full Stack Developer</h2>
-            <p>Passionate about creating scalable web solutions with 2+ years of experience in Java, Spring Boot, Angular, and Django. Ready to contribute to innovative projects in Agile environments.</p>
+            <p style="margin-top:10px; font-weight:bold; color:#ffdfbf; font-size:1.1rem;">
+                🚀 Immediate Joiner
+            </p>
+            <h2>Full Stack Developer (Java | Spring Boot | Angular)</h2>
+            <p>Full Stack Developer with 3+ years of experience building scalable, high-performance applications using Java, Spring Boot, Angular, Django, and SQL. Passionate about clean architecture, performance optimization, and building production-ready systems. <strong>Immediate Joiner.</strong></p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">
                     <i class="fas fa-code"></i>
@@ -644,17 +647,17 @@
         <div class="about-content">
             <div class="about-text">
                 <h3>Hello! I'm Yogesh</h3>
-                <p>A dedicated Full Stack Developer with 2+ years of experience building scalable web applications. I specialize in Java, Spring Boot, Angular, and Django, with a passion for clean code and innovative solutions.</p>
-                <p>Currently working at Torenzo Technologies, I've successfully delivered multiple projects that improved performance by up to 40% and accelerated feature delivery by 25%.</p>
-                <p>I hold a Bachelor's degree in Electrical Engineering with a CGPA of 8.71 and have completed a Master Diploma in Java Technologies.</p>
+                <p>I am a Full Stack Developer with 3+ years of experience creating scalable, maintainable, and high-performance applications. I specialize in Java, Spring Boot, Angular, Django, REST APIs, and SQL optimization.</p>
+                <p>At Torenzo Technologies, I’ve contributed to multiple production releases, improved system performance by 40%, and developed modular architectures that accelerated feature delivery by 25%.</p>
+                <p>I hold a Bachelor's degree in Electrical Engineering (CGPA: 8.71) and a Master Diploma in Java Technologies. I am currently seeking new opportunities as a <strong>Full Stack / Java Developer</strong> and am available for an <strong>Immediate Joining.</strong></p>
             </div>
             <div class="stats">
                 <div class="stat-item">
-                    <span class="stat-number">2+</span>
+                    <span class="stat-number">3+</span>
                     <span>Years Experience</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">5+</span>
+                    <span class="stat-number">10+</span>
                     <span>Major Projects</span>
                 </div>
                 <div class="stat-item">
@@ -665,6 +668,7 @@
                     <span class="stat-number">85%</span>
                     <span>Test Coverage</span>
                 </div>
+
             </div>
         </div>
     </section>
